Task-53936: Fix TopBar Icons order and alignment (#470)

--- a/application/src/main/webapp/css/components/chatContact.less
+++ b/application/src/main/webapp/css/components/chatContact.less
@@ -55,7 +55,7 @@
 
 .user-invisible, .user-offline {
   .user-status, .uiIconStatus, .uiIconStatus:hover, > a .uiIconStatus, &:hover .user-status, &:hover .uiIconStatus {
-    color: #999999!important;
+    color: @quoteBarColor !important;
   }
 }
 .user-available {
